Added all buttons and HTML skeleton is almost done

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,76 @@
 </head>
 <body>
 
-    <h1>Todo app</h1>
+    <div class="container-grid">
+
+    <header>
+        <div class="logo">
+            <?xml version="1.0" encoding="utf-8"?><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 104.69 122.88" style="enable-background:new 0 0 104.69 122.88" xml:space="preserve"><g><path d="M31.54,86.92c-1.74,0-3.15-1.41-3.15-3.15c0-1.74,1.41-3.15,3.15-3.15H55c1.74,0,3.15,1.41,3.15,3.15 c0,1.74-1.41,3.15-3.15,3.15H31.54L31.54,86.92z M31.54,42.27c-1.74,0-3.15-1.41-3.15-3.15c0-1.74,1.41-3.15,3.15-3.15h41.61 c1.74,0,3.15,1.41,3.15,3.15c0,1.74-1.41,3.15-3.15,3.15H31.54L31.54,42.27z M7.33,0h90.02c2.02,0,3.85,0.82,5.18,2.15 c1.33,1.33,2.15,3.16,2.15,5.18v108.21c0,2.02-0.82,3.85-2.15,5.18c-1.33,1.33-3.16,2.15-5.18,2.15H7.33 c-2.02,0-3.85-0.82-5.18-2.15C0.82,119.4,0,117.57,0,115.55V7.33c0-2.02,0.82-3.85,2.15-5.18C3.48,0.82,5.31,0,7.33,0L7.33,0z M97.36,6.3H7.33c-0.28,0-0.54,0.12-0.73,0.3C6.42,6.8,6.3,7.05,6.3,7.33v108.21c0,0.28,0.12,0.54,0.31,0.72 c0.19,0.19,0.45,0.31,0.73,0.31h90.02c0.28,0,0.54-0.12,0.72-0.31c0.19-0.19,0.31-0.45,0.31-0.72V7.33c0-0.28-0.12-0.54-0.31-0.73 C97.89,6.42,97.64,6.3,97.36,6.3L97.36,6.3z M31.54,64.59c-1.74,0-3.15-1.41-3.15-3.15c0-1.74,1.41-3.15,3.15-3.15h41.61 c1.74,0,3.15,1.41,3.15,3.15c0,1.74-1.41,3.15-3.15,3.15H31.54L31.54,64.59z"/></g></svg>
+            <span>TODO</span>
+        </div>
+    </header>
+
+
+        <div class="grid-left">
+            <div class="menu">
+                <button class="all-tasks">
+                    <svg class="inbox" width="24" height="24">
+                        <g fill="currentColor" fill-rule="nonzero">
+                          <path d="M10 14.5a2 2 0 104 0h5.5V18a1.5 1.5 0 01-1.5 1.5H6A1.5 1.5 0 014.5 18v-3.5H10z" opacity="0.1"></path>
+                          <path d="M8.062 4h7.876a2 2 0 011.94 1.515l2.062 8.246a2 2 0 01.06.485V18a2 2 0 01-2 2H6a2 2 0 01-2-2v-3.754a2 2 0 01.06-.485l2.06-8.246A2 2 0 018.061 4zm0 1a1 1 0 00-.97.757L5.03 14.004a1 1 0 00-.03.242V18a1 1 0 001 1h12a1 1 0 001-1v-3.754a1 1 0 00-.03-.242l-2.06-8.247A1 1 0 0015.94 5H8.061zM12 17.25A2.75 2.75 0 019.295 15H7a.5.5 0 110-1h2.75a.5.5 0 01.5.5 1.75 1.75 0 003.5 0 .5.5 0 01.5-.5H17a.5.5 0 110 1h-2.295A2.75 2.75 0 0112 17.25z"></path>
+                        </g>
+                      </svg>
+                      All tasks
+                </button>
+
+                <button class="today">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M360-335.38q-35.08 0-59.85-24.77-24.77-24.77-24.77-59.85t24.77-59.85q24.77-24.77 59.85-24.77t59.85 24.77q24.77 24.77 24.77 59.85t-24.77 59.85q-24.77 24.77-59.85 24.77ZM224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v510.76q0 27.62-18.5 46.12Q763-120 735.38-120H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-350.76H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69Z"></path></svg>
+                    Today
+                </button>
+
+                <button class="this-week">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M320-404.62q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.57 0-12.39 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.58 0 12.38-9.19 21.57-9.2 9.19-21.58 9.19Zm160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.57 0-12.39 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.58 0 12.38-9.19 21.57-9.2 9.19-21.58 9.19Zm160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.57 0-12.39 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.58 0 12.38-9.19 21.57-9.2 9.19-21.58 9.19ZM224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v510.76q0 27.62-18.5 46.12Q763-120 735.38-120H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-350.76H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69Z"></path></svg>
+                    This week
+                </button>
+            </div>
+
+
+            <div class="projects">
+                <h2>Projects</h2>
+                <div class="project-list">
+                    <button class="button-project">
+                        # Project name
+                    </button>
+                    <button class="button-project">
+                        # Project 2 name
+                    </button>
+                    <button class="button-project">
+                        # Project 3 name
+                    </button>
+                </div>
+                <button class="add-project">+ Add Project</button>
+            </div>
+        </div>
+
+        <div class="grid-right">
+            <div class="heading">
+                <h1>Inbox</h1>
+            </div>
+            
+            <div class="tasks">
+                <h3>Task name</h3>
+                <span class="priority">Important</span>
+                <div class="date">20 Aug 2024</div>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="add-task">
+                <button class="add">+ Add Task</button>
+            </div>
+        </div>
+
+    </div>
     
 </body>
 </html>
